# erudite

./: .markdownlint.json  .markdownlintignore  .prettierrc.toml  .rustfmt.toml  .taplo.toml  CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: candidate.yaml  lint_dev.yaml  lint_prod.yaml  release.yaml  test_dev.yaml  test_prod.yaml
